--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "test_task"}]
 [tool.poetry.dependencies]
 python = "^3.11"
 django = "^4.1.7"
+requests = "^2.28.2"
 
 
 [build-system]
